Switching imgur links to HTTPS

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
 			</div>
 			<div id="mapPeripheral" class="hudPeripheral hudPeripheralNorth">
 				<div class="hudItem">
-					<span id="mapAccountButton" class="hudSelect curToggle" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='http://i.imgur.com/56HALM7.png' /></div>">
+					<span id="mapAccountButton" class="hudSelect curToggle" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='https://i.imgur.com/56HALM7.png' /></div>">
 						<span class="hudButtonContainer"><ins class="hudButton mnu mnu_account"></ins></span>
 						<var class="hudTitle jsTranslate">Account</var>
 					</span>
 				</div>
 				<div class="hudItem">
-					<span id="mapSwitchButton" class="hudSelect curToggle" title="<dfn>View WvW Live Map</dfn><br />gw2timer.com/wvw<div class='mapLoc'><img src='http://i.imgur.com/yimNX7L.png' /></div>">
+					<span id="mapSwitchButton" class="hudSelect curToggle" title="<dfn>View WvW Live Map</dfn><br />gw2timer.com/wvw<div class='mapLoc'><img src='https://i.imgur.com/yimNX7L.png' /></div>">
 						<span class="hudButtonContainer"><ins class="hudButton mnu mnu_wvw"></ins></span>
 						<var class="hudTitle jsTranslate">WvW</var>
 					</span>
@@ -174,9 +174,9 @@
 						<div class="hudHelpScroll jsScrollable">
 							<table class="hudHelpMode">
 								<tr>
-									<td><var class="hudHelpModeName jsTranslate">Tile Mode</var><a href="./?mode=Tile" title="<dfn>gw2timer.com/t</dfn>"><img class="hudHelpModePreview" data-src="http://i.imgur.com/Q6O2lIx.png" /></a></td>
-									<td><var class="hudHelpModeName jsTranslate">Mobile Mode</var><a href="./?mode=Mobile" title="<dfn>gw2timer.com/m</dfn>"><img class="hudHelpModePreview" data-src="http://i.imgur.com/0QsaeY7.png" /></a></td>
-									<td><var class="hudHelpModeName jsTranslate">Simple Mode</var><a href="./?mode=Simple" title="<dfn>gw2timer.com/s</dfn>"><img id="hudHelpModePreviewLast" class="hudHelpModePreview" data-src="http://i.imgur.com/Nk42voP.png" /></a></td>
+									<td><var class="hudHelpModeName jsTranslate">Tile Mode</var><a href="./?mode=Tile" title="<dfn>gw2timer.com/t</dfn>"><img class="hudHelpModePreview" data-src="https://i.imgur.com/Q6O2lIx.png" /></a></td>
+									<td><var class="hudHelpModeName jsTranslate">Mobile Mode</var><a href="./?mode=Mobile" title="<dfn>gw2timer.com/m</dfn>"><img class="hudHelpModePreview" data-src="https://i.imgur.com/0QsaeY7.png" /></a></td>
+									<td><var class="hudHelpModeName jsTranslate">Simple Mode</var><a href="./?mode=Simple" title="<dfn>gw2timer.com/s</dfn>"><img id="hudHelpModePreviewLast" class="hudHelpModePreview" data-src="https://i.imgur.com/Nk42voP.png" /></a></td>
 								</tr>
 							</table>
 							<div class="cntDivider hudHelpDivider"></div>
@@ -455,7 +455,7 @@
 			</div>
 			<div class="hudPeripheral hudPeripheralSouth">
 				<span class="hudLinks">
-					<a class="linkExternal" title="<dfn>Download the app to run GW2Timer in game!</dfn><br /><div class='mapLoc'><img src='http://i.imgur.com/mZ1Tboj.png' /></div>" href="http://forum.renaka.com/topic/5546166/">
+					<a class="linkExternal" title="<dfn>Download the app to run GW2Timer in game!</dfn><br /><div class='mapLoc'><img src='https://i.imgur.com/mZ1Tboj.png' /></div>" href="http://forum.renaka.com/topic/5546166/">
 						<img id="itemLogo" src="img/meta/favicon.png" alt="Overlay Application" />gw2timer.com <u>overlay</u>
 					</a>
 				</span>
@@ -563,7 +563,7 @@
 			</div>
 			<div id="wvwPeripheral" class="hudPeripheral hudPeripheralNorth">
 				<div class="hudItem">
-					<span id="wvwAccountButton" class="hudSelect curToggle" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='http://i.imgur.com/56HALM7.png' /></div>">
+					<span id="wvwAccountButton" class="hudSelect curToggle" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='https://i.imgur.com/56HALM7.png' /></div>">
 						<span class="hudButtonContainer"><ins class="hudButton mnu mnu_account"></ins></span>
 						<var class="hudTitle jsTranslate">Account</var>
 					</span>
