--- a/bin/clear.html
+++ b/bin/clear.html
@@ -3,18 +3,18 @@
 	<head>
 		<title>GW2Timer Application Reset</title>
 		<script type="text/javascript">
-			if (confirm("Please consult the forum if you are having problems using the website: http://gw2timer.com/forum\n\n"
+			if (confirm("Please consult the forum if you are having problems using the website: https://gw2timer.com/forum\n\n"
 				+ "GW2Timer.com Reset: This will clear all options and everything you have written in this website. Continue?"))
 			{
 				localStorage.clear();
 			}
 			else
 			{
-				document.location = "http://gw2timer.com";
+				document.location = "https://gw2timer.com";
 			}
 		</script>
 	</head>
 	<body>
-		<div>Confirming the JavaScript dialog on this page will clear your browser's localStorage for <a href="http://gw2timer.com">GW2Timer.com</a></div>
+		<div>Confirming the JavaScript dialog on this page will clear your browser's localStorage for <a href="https://gw2timer.com">GW2Timer.com</a></div>
 	</body>
 </html>
