--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
-	<script type="text/javascript" src="data/general.js?v=20171231"></script>
+	<script type="text/javascript" src="data/general.js?v=20180115"></script>
 	<script type="text/javascript" src="data/sale.js?v=20180109"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20171211"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20180114"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -210,7 +210,7 @@
 										<li><a href="http://forum.renaka.com/topic/6209670/">LS3: Transfer Chaser</a></li>
 										<li><a href="http://forum.renaka.com/topic/6205181/">LS3: Bloodstone-Crazed Creatures</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/4urr23/leyline_anomaly_tldr_guide_v2/">LS3: Ley-Line Anomaly</a></li>
-										<li><a href="http://gw2timer.com/?page=Schedules">World Bosses &amp; Temples</a></li>
+										<li><a href="https://gw2timer.com/?page=Schedules">World Bosses &amp; Temples</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/5v6v37/altoholic_world_bosses_dead_because_you_didnt/">Important Waypoints</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/3p5lw3/i_spent_50_hours_running_through_tyria_with_a_gps/">GPS World Completion</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/4bijoi/lets_catch_all_50_ranger_pets_a_map_and_pokedex/">Ranger Pets Map</a></li>
@@ -1001,7 +1001,7 @@
 					<h3>Export / Backup</h3>
 					<span>The Print button will generate a file (containing all options and user data) that you can save and transfer to another computer. Use the Import button to load that file.</span>
 					<div class="optButtons">
-						<button id="optPrintLocalStorage" title="Read what is stored in your browser for this website. Most of these key-value pairs can be overriden directly via URL query string. Example: http://gw2timer.com/?bol_showWorldCompletion=true&amp;int_setClock=3">Print Website Memory</button>
+						<button id="optPrintLocalStorage" title="Read what is stored in your browser for this website. Most of these key-value pairs can be overriden directly via URL query string. Example: https://gw2timer.com/?bol_showWorldCompletion=true&amp;int_setClock=3">Print Website Memory</button>
 					</div>
 					<h3>Import / Restore</h3>
 					<input id="optImportLocalStorage" type="file" />
