--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
-	<script type="text/javascript" src="data/general.js?v=20180301"></script>
-	<script type="text/javascript" src="data/sale.js?v=20180301"></script>
+	<script type="text/javascript" src="data/general.js?v=20180306"></script>
+	<script type="text/javascript" src="data/sale.js?v=20180306"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
 	<script type="text/javascript" src="gw2t-min.js?v=20180119"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -447,6 +447,7 @@
 									<li data-zone="desolation"></li>
 									<li data-zone="vabbi"></li>
 									<li data-zone="istan"></li>
+									<li data-zone="sandswept"></li>
 								</ul>
 							</aside>
 						</div>
