Domain of Kourna zone

--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
 									<li data-zone="vabbi"></li>
 									<li data-zone="istan"></li>
 									<li data-zone="sandswept"></li>
+									<li data-zone="kourna"></li>
 								</ul>
 							</aside>
 						</div>
