Notification console message

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="data/general.js?v=20180814"></script>
 	<script type="text/javascript" src="data/sale.js?v=20180827"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20180721"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20180828"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -243,6 +243,7 @@
 								<br />
 								<b class="jsTranslate">Desktop Notifications</b>
 								<label title="If you enable this option, please click on &quot;Allow&quot; when your browser asks for notification permissions."><input id="opt_bol_alertDesktop" type="checkbox" /> Show notification popups</label>
+								<label title="Show notifications in the console."><input id="opt_bol_alertConsole" type="checkbox" /> Show notification messages</label>
 								<label title="How long before the notification popup auto-closes."><input id="opt_int_secAlertDesktop" type="number" min="3" max="60" step="1" /> Seconds popup duration</label>
 								<b class="jsTranslate">Speech Notifications</b>
 								<label title="If unchecked, this will permanently mute all spoken alerts."><input id="opt_bol_alertSpeech" type="checkbox" /> Enable speech sounds</label>
