--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
-	<script type="text/javascript" src="data/general.js?v=20180814"></script>
-	<script type="text/javascript" src="data/sale.js?v=20180919"></script>
+	<script type="text/javascript" src="data/general.js?v=20180920"></script>
+	<script type="text/javascript" src="data/sale.js?v=20180920"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
 	<script type="text/javascript" src="gw2t-min.js?v=20180901"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -450,6 +450,7 @@
 									<li data-zone="istan"></li>
 									<li data-zone="sandswept"></li>
 									<li data-zone="kourna"></li>
+									<li data-zone="jahai"></li>
 								</ul>
 							</aside>
 						</div>
