Path of Fire timers update

--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
 									<li data-zone="timberline"></li>
 									<li data-zone="frostgorge"></li>
 									<li data-zone="bitterfrost"></li>
+									<li data-zone="thunderhead"></li>
 								</ul>
 							</aside>
 							<aside>
@@ -451,6 +452,7 @@
 									<li data-zone="sandswept"></li>
 									<li data-zone="kourna"></li>
 									<li data-zone="jahai"></li>
+									<li data-zone="dragonfall"></li>
 								</ul>
 							</aside>
 						</div>
