Map switch option, update DB, disable touch in overlay mode

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="data/general.js?v=20191208"></script>
 	<script type="text/javascript" src="data/sale.js?v=20190105"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20191123"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20200108"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -354,6 +354,7 @@
 							<label><input type="radio" name="int_setFollow" /> Zone</label>
 						</fieldset>
 						<label title="Automatically move the character pin to your in-game location."><img data-src="img/map/pin_character.png" /><input id="opt_bol_displayCharacter" type="checkbox" />Display Character Pin</label>
+						<label title="Automatically switch the map when you enter PvE/PvP/WvW."><img data-src="img/touch/toggle_map.png" /><input id="opt_bol_switchMap" type="checkbox" />Switch Maps</label>
 						<label title="Repeated milliseconds before your character is pinpointed again.<br />This should not be lower than the overlay's interval."><input id="opt_int_msecGPSRefresh" type="number" min="50" max="1000" step="10" /> GPS Interval (ms)</label>
 					</div>
 				</div>
