Update forum links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="data/general.js?v=20191208"></script>
 	<script type="text/javascript" src="data/sale.js?v=20190105"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20200108"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20200216"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -55,7 +55,7 @@
 		- You are using an unsupported browser; please try another browser.<br />
 		- Your browser is blocking the plugins.js map script; please whitelist it.<br />
 		- This web application encountered a bug; try refreshing (Ctrl+F5).<br />
-		Do you want to <a href="http://forum.renaka.com/topic/5476238/">ask for help?</a><br />
+		Do you want to <a href="https://www.tapatalk.com/groups/renaka/gw2timer-com-gw2-guild-wars-2-f4/">ask for help?</a><br />
 	</div>
 	<kbd id="watToggle" class="btnWindow btnToggle" title="<dfn>Toggle stopwatch</dfn>. Click the stop button to reset."></kbd>
 	<div id="itemStopwatch">
@@ -184,18 +184,18 @@
 								<div class="hudHelpColumn">
 									<h2>Contact</h2>
 									<ul>
-										<li><strong><a class="jsTranslate" href="http://forum.renaka.com/forum/368355/">Forum</a></strong> - Comments and suggestions</li>
-										<li><a class="jsTranslate" href="http://forum.renaka.com/topic/5500046/">Changelog</a> - Site updates</li>
+										<li><strong><a class="jsTranslate" href="https://www.tapatalk.com/groups/renaka/gw2timer-com-gw2-guild-wars-2-f4/">Forum</a></strong> - Comments and suggestions</li>
+										<li><a class="jsTranslate" href="https://www.tapatalk.com/groups/renaka/gw2timer-update-notes-t141.html">Changelog</a> - Site updates</li>
 										<li><a href="https://twitter.com/gw2timer">Twitter</a> - Follow GW2Timer.com</li>
-										<li><ins class="s16 s16_wiki"></ins> <a href="http://forum.renaka.com/topic/5954229/">ArenaNet</a> endorsements</li>
+										<li><ins class="s16 s16_wiki"></ins> <a href="https://www.tapatalk.com/groups/renaka/praises-for-gw2timer-com-t140.html">ArenaNet</a> endorsements</li>
 									</ul>
 									<h2>Tutorials</h2>
 									<ul>
 										<li><a href="https://www.youtube.com/watch?v=uXqvTMGNIXo">How to use GW2Timer.com</a></li>
-										<li><a href="http://forum.renaka.com/topic/5602037/">Timer Features</a></li>
-										<li><a href="http://forum.renaka.com/topic/5888854/">Map Features</a></li>
-										<li><a href="http://forum.renaka.com/topic/5697040/">TP &amp; Gem Tracker</a></li>
-										<li><a href="http://forum.renaka.com/topic/5547304/">Embed To Your Website</a></li>
+										<li><a href="https://www.tapatalk.com/groups/renaka/user-manual-gw2timer-t137.html">Timer Features</a></li>
+										<li><a href="https://www.tapatalk.com/groups/renaka/user-manual-map-t139.html">Map Features</a></li>
+										<li><a href="https://www.tapatalk.com/groups/renaka/user-manual-trading-post-app-t138.html">TP &amp; Gem Tracker</a></li>
+										<li><a href="https://www.tapatalk.com/groups/renaka/add-gw2timer-to-your-website-t142.html">Embed To Your Website</a></li>
 									</ul>
 								</div>
 								<div class="hudHelpColumn">
@@ -207,8 +207,8 @@
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/4vic4c/bloodstone_fen_map_tools_resource_nodes_event_map/">Zone: Bloodstone Fen</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/346wom/120_silverwastes_lost_bandit_chests_map_locations/">Zone: Silverwastes</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/2df20y/drp2_dry_top_live_map_and_timer_updated_100/">Zone: Dry Top</a></li>
-										<li><a href="http://forum.renaka.com/topic/6209670/">LS3: Transfer Chaser</a></li>
-										<li><a href="http://forum.renaka.com/topic/6205181/">LS3: Bloodstone-Crazed Creatures</a></li>
+										<li><a href="https://www.tapatalk.com/groups/renaka/transfer-chaser-guide-2016-08-23-living-story-t98.html">LS3: Transfer Chaser</a></li>
+										<li><a href="https://www.tapatalk.com/groups/renaka/bloodstone-crazed-creatures-timers-t72.html">LS3: Bloodstone-Crazed Creatures</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/4urr23/leyline_anomaly_tldr_guide_v2/">LS3: Ley-Line Anomaly</a></li>
 										<li><a href="https://gw2timer.com/?page=Schedules">World Bosses &amp; Temples</a></li>
 										<li><a href="https://www.reddit.com/r/Guildwars2/comments/5v6v37/altoholic_world_bosses_dead_because_you_didnt/">Important Waypoints</a></li>
@@ -462,7 +462,7 @@
 			</div>
 			<div class="hudPeripheral hudPeripheralSouth">
 				<span class="hudLinks">
-					<a class="linkExternal" title="<dfn>Download the app to run GW2Timer in game!</dfn><br /><div class='mapLoc'><img src='https://i.imgur.com/mZ1Tboj.png' /></div>" href="http://forum.renaka.com/topic/5546166/">
+					<a class="linkExternal" title="<dfn>Download the app to run GW2Timer in game!</dfn><br /><div class='mapLoc'><img src='https://i.imgur.com/mZ1Tboj.png' /></div>" href="https://www.tapatalk.com/groups/renaka/gw2navi-guild-wars-2-overlay-t144.html">
 						<img id="itemLogo" src="img/meta/favicon.png" alt="Overlay Application" />gw2timer.com <u>overlay</u>
 					</a>
 				</span>
@@ -664,7 +664,7 @@
 							<label title="Show/Hide the container for Leaderboard and Log."><img data-src="img/ui/hud.png" /><input id="opt_bol_showHUDWvW" type="checkbox" /> Show HUD</label>
 							<label title="Repeated seconds before API data are downloaded again to check if objectives have flipped."><input id="opt_int_secWvWRefresh" type="number" min="5" max="60" step="1" /> Refresh Interval (sec)</label>
 							<label title="Old log entries beyond this limit shall be deleted."><input id="opt_int_numLogEntries" type="number" min="64" max="1024" step="1" /> Max Log Entries</label>
-							<div id="wvwHelpLinks"><a href="http://forum.renaka.com/forum/368355/">Forum</a> - <a href="https://www.youtube.com/watch?v=uXqvTMGNIXo&t=16m09s">Help</a> - <a href="http://forum.renaka.com/topic/5547304/1/#post-455300">Embed</a> - <a href="http://forum.renaka.com/topic/5546166/">Overlay</a></div>
+							<div id="wvwHelpLinks"><a href="https://www.tapatalk.com/groups/renaka/gw2timer-com-gw2-guild-wars-2-f4/">Forum</a> - <a href="https://www.youtube.com/watch?v=uXqvTMGNIXo&t=16m09s">Help</a> - <a href="https://www.tapatalk.com/groups/renaka/add-gw2timer-to-your-website-t142.html#p351">Embed</a> - <a href="https://www.tapatalk.com/groups/renaka/gw2navi-guild-wars-2-overlay-t144.html">Overlay</a></div>
 						</div>
 					</div>
 				</div>
@@ -865,7 +865,7 @@
 						<li><a class="linkLanguage" data-lang="ru">Русский</a></li>
 						<li><a class="linkLanguage" data-lang="tw">繁體中文</a></li>
 						<li><a class="linkLanguage" data-lang="zh">简体中文</a></li>
-						<li><a class="linkExternal" href="http://forum.renaka.com/topic/5529319/"><sub>Help Translate</sub></a></li>
+						<li><a class="linkExternal" href="https://www.tapatalk.com/groups/renaka/help-translate-gw2timer-to-your-language-t143.html"><sub>Help Translate</sub></a></li>
 					</ul>
 				</div>
 				<div id="itemDashboard">
@@ -974,7 +974,7 @@
 					<label title="Include guild vaults contents in audit."><input id="opt_bol_auditVault" type="checkbox" /> Audit includes guilds vault</label>
 					<label title="Will load an invisible iframe of the audit page at every daily reset.<br />You must have an API key entered and checkmarked on the account page."><input id="opt_bol_auditAccountOnReset" type="checkbox" /> Automatically audit at daily reset</label>
 					<label title="Audit history will record the converted sum of all currencies in a category (for example gems of outfits) rather than only the coin currency."><input id="opt_bol_auditHistoryConverted" type="checkbox" /> Convert category's currencies in audit history</label>
-					<label title="How many audit reports per account will be saved?"><input id="opt_int_numAuditReports" type="number" min="32" max="4096" step="1" /> Number of audit reports in history</label>
+					<label title="How many audit reports per account will be saved?"><input id="opt_int_numAuditReports" type="number" min="32" max="8192" step="1" /> Number of audit reports in history</label>
 					<h2>Trading</h2>
 					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh data and enable notification</label>
 					<label title="How many seconds before the program refreshes price and exchange data?"><input id="opt_int_secTradingRefresh" type="number" min="30" max="600" step="1" /> Seconds between refreshes</label>
