--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<script type="text/javascript" src="data/sale.js?v=20190105"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
 	<script type="text/javascript" src="gw2t-min.js?v=20200216"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
+	<!-- Google AdSense -->
+	<script data-ad-client="ca-pub-1490832425321221" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
