--- a/index.html
+++ b/index.html
@@ -889,13 +889,12 @@
 				</div>
 				<div id="dirContent">
 					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<!-- Square -->
 					<ins class="adsbygoogle"
 						 style="display:block"
+						 data-ad-format="fluid"
+						 data-ad-layout-key="-gw-3+1f-3d+2z"
 						 data-ad-client="ca-pub-1490832425321221"
-						 data-ad-slot="1859740025"
-						 data-ad-format="auto"
-						 data-full-width-responsive="true"></ins>
+						 data-ad-slot="9355086662"></ins>
 					<script>
 						 (adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
