Egg timer repeat option

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="data/general.js?v=20201022"></script>
 	<script type="text/javascript" src="data/sale.js?v=20190105"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20200801"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20201029"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google AdSense -->
 	<script data-ad-client="ca-pub-1490832425321221" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Google Analytics -->
@@ -262,6 +262,7 @@
 							<div id="mapAlarmStopwatchDown">
 								<input id="opt_int_minStopwatchAlert" type="number" min="0" max="1440" step="1" value="15" title="<dfn>Egg Timer:</dfn> minutes from now when you will be alerted." />
 								<input id="opt_str_textStopwatchAlert" type="text" maxlength="128" value="Alert, alert, alert!" title="The text to be spoken when the egg timer finishes." />
+								<label style="display:inline;" title="Repeat the alert when it runs out."><input id="opt_bol_repeatStopwatchAlert" type="checkbox" /> &infin;</label>
 								<span class="watButtons">
 									<kbd id="watTimerStart">▶</kbd><kbd id="watTimerStop">■</kbd>
 								</span>
