--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 							<div id="mapAlarmStopwatchDown">
 								<input id="opt_int_minStopwatchAlert" type="number" min="0" max="1440" step="1" value="15" title="<dfn>Egg Timer:</dfn> minutes from now when you will be alerted." />
 								<input id="opt_str_textStopwatchAlert" type="text" maxlength="128" value="Alert, alert, alert!" title="The text to be spoken when the egg timer finishes." />
-								<label style="display:inline;" title="Repeat the alert when it runs out."><input id="opt_bol_repeatStopwatchAlert" type="checkbox" /> &infin;</label>
+								<label style="display:inline;" title="Repeat the egg timer when it runs out."><input id="opt_bol_repeatStopwatchAlert" type="checkbox" /> &infin;</label>
 								<span class="watButtons">
 									<kbd id="watTimerStart">▶</kbd><kbd id="watTimerStop">■</kbd>
 								</span>
