End of Dragons meta timeline

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
-	<script type="text/javascript" src="data/general.js?v=20220303"></script>
+	<script type="text/javascript" src="data/general.js?v=20220307"></script>
 	<script type="text/javascript" src="data/sale.js?v=20190105"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
-	<script type="text/javascript" src="gw2t-min.js?v=20220301"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t-min.js?v=20220307"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
 	<!-- Google AdSense -->
 	<script data-ad-client="ca-pub-1490832425321221" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Google Analytics -->
@@ -432,6 +432,13 @@
 									<li data-zone="frostgorge"></li>
 									<li data-zone="bitterfrost"></li>
 									<li data-zone="thunderhead"></li>
+								</ul>
+								<h2 data-region="cantha"></h2>
+								<ul>
+									<li data-zone="seitung"></li>
+									<li data-zone="kaineng"></li>
+									<li data-zone="echovald"></li>
+									<li data-zone="dragonsend"></li>
 								</ul>
 							</aside>
 							<aside>
