--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 		ga('create', 'UA-51018564-1', 'gw2timer.com');
 		ga('send', 'pageview');
 	</script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNW76ZPRQS"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-ZNW76ZPRQS');
+	</script>
 </head>
 
 <body>
