--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<!-- Web application files -->
 	<script type="text/javascript" src="plugins.js?v=20170606"></script>
-	<script type="text/javascript" src="data/general.js?v=20230824"></script>
+	<script type="text/javascript" src="data/general.js?v=20230911"></script>
 	<script type="text/javascript" src="data/sale.js?v=20190105"></script>
 	<script type="text/javascript" src="data/chains.js"></script>
 	<script type="text/javascript" src="gw2t-min.js?v=20230824"></script><!-- Source is at https://gw2timer.com/gw2t.js -->
@@ -440,6 +440,11 @@
 									<li data-zone="frostgorge"></li>
 									<li data-zone="bitterfrost"></li>
 									<li data-zone="thunderhead"></li>
+								</ul>
+								<h2 data-region="horn"></h2>
+								<ul>
+									<li data-zone="skywatch"></li>
+									<li data-zone="amnytas"></li>
 								</ul>
 								<h2 data-region="cantha"></h2>
 								<ul>
