Meta description update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>GW2Timer.com - ArenaNet-Recommended GW2 Tool</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
-	<meta name="description" content="Guild Wars 2 End of Dragons world boss events timer, API key account viewer, resource nodes completion map, Trading Post tracker, WvW live map overlay." />
+	<meta name="description" content="Guild Wars 2 Secrets of the Obscure world boss events timer, API key account viewer, resource nodes completion map, Trading Post tracker, WvW live map overlay." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 	<meta name="msvalidate.01" content="95E5C0E89A8A24688EC00F2A69986A17" />
 
